web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-expression-name/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,11)
1|(function*yield(){})
 |         ^
